--- a/custom.css
+++ b/custom.css
@@ -26,6 +26,7 @@ limitations under the License.
    --background-light: #AAA;
    --background-bright: #FFF;
 
+   --border: rgba(255,255,255,.12);
    --border-dim: #666;
    --border-bright: var(--primary);
 
@@ -137,7 +138,6 @@ ts-jumper input[type="text"],
 .p-channel_sidebar__channel--selected:hover,
 .p-channel_sidebar__link--selected:hover {
    background-color: var(--background) !important;
-   border: solid var(--border-bright);
    border-width: 1px 1px 1px 0;
 }
 
@@ -173,9 +173,31 @@ li.active[class] span,
 .c-message--light .c-message__sender .c-message__sender_link {
     color: var(--text-special);
 }
+.p-classic_nav {
+ background: var(--background-bright);   
+}
+.p-classic_nav__right__search {
+    border: 1px solid var(--text);
+}
+.p-classic_nav__right__search:hover {
+    border-color: rgba(239,238,239,.7);
+}
+.p-classic_nav__right__button, .p-classic_nav__model__button, .p-classic_nav__right__search:hover .p-classic_nav__right__search__icon, .p-classic_nav__right__search:hover .p-classic_nav__right__search__placeholder {
+    color: var(--text);
+}
+.p-classic_nav__right__search__icon {
+    margin: 0 8px;
+    color: var(--text);
+}
+.p-classic_nav__right__search__placeholder {
+    color: var(--text);
+}
 .p-client {
     background: var(--background-elevated);
     color: var(--text);
+}
+.p-classic_nav__model__title__info {
+    color: var(--text);   
 }
 .c-message__body {
     color: var(--text);   
